--- a/uniper-db-poc/proxyconfig.json
+++ b/uniper-db-poc/proxyconfig.json
@@ -1,6 +1,6 @@
 {
   "/api/*": {
-    "target": "http://localhost:9191",
+    "target": "http://localhost:9191/models/",
     "secure": false,
     "changeOrigin": true,
     "logLevel": "debug",
